[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Adam Woolhether <adamwoolhether@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13.3"
actix-web = "=4.0.1"
tracing-actix-web = "0.7.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "4.1.2"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = "0.4.22"
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
validator = "0.16.0"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8.5", features=["std_rng"]}
anyhow = "1"
thiserror = "1"
base64 = "0.21.0"
argon2 = { version = "0.5.0", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.6"
hex = "0.4"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.7.2" , features = ["redis-rs-tls-session"]}
serde_json = "1.0.83"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]

[dev-dependencies]
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.83"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
linkify = "0.9.0"